test/errors/scope-resolution/superFromTopLevelModule1.chpl
module superFromTopLevelModule1 {
  import super.foo;
  var x: int; // Need executable code for the scope resolver to run!
}

